apreparing build for production, adding a tags to github and linkedin icons and fixing up flex properties for them, fixed the overflow-x for the timeline issue for mobile for timeline component and modified index.html, add logos and configure manifest.json

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -53,14 +53,16 @@ form * {
     font-size: 14pt;
 }
 
-#logos {
+.logos {
     display: flex;
     flex-direction: row;
     align-items: center;
+    /* justify-content: space-between; */
+    justify-content: center;
 }
 
-#logos * {
-    height: 100%;
+.logos a {
+    flex: 1;
 }
 
 .helper-text {
