--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,5 +1,6 @@
 .projects-section {
     margin-top: 10px;
+    overflow-x: hidden;
 }
 
 #projects-section {
